2007-07-26  Philip Van Hoof  <pvanhoof@gnome.org>

	* More granularity in the locking of the POP code
	* Several fixes in the POP code
	* Folder renaming for local folders

2007-07-25  Philip Van Hoof  <pvanhoof@gnome.org>

	* Various locking improvements in the POP code
	* Parallel retrieval of messages
	* Disconnecting after summary retrieval of a POP folder
	* Disconnecting after get-msg and sync of a POP folder
	* Some reference counting problems when factoring folders

2007-07-24  Philip Van Hoof  <pvanhoof@gnome.org>

	* Preparing for a release candidate
	* Added skeleton for webkit support
	* Restructuring the internal API for async methods a bit
	* Experimental lining up of async functions in one thread

2007-07-23  Murray Cumming  <murrayc@murrayc.com>

	* libtinymail-camel/tny-camel-account.c: Improved the 
	documentation for tny_camel_account_set_online().

	* libtinymail/tny-merge-folder.c: (tny_merge_folder_get_id),
	(tny_merge_folder_instance_init): Use 
	unknown_mergefolder instead of an empty string for the default ID, 
	because an empty string is not allowed by the get_func_id() DBC 
	contract, causing a crash at runtime when DBC is enabled in the build.

2007-07-23  Jose Dapena Paz  <jdapena@igalia.com>

	* libtinymail-camel/camel-lite/camel/providers/imap/camel-imap-store.c:
	(camel_imap_recon): if there's no reconnection operation, then we don't
	call it, preventing crashes.

2007-07-23  Jose Dapena Paz  <jdapena@igalia.com>
	
	* libtinymail-camel/camel-lite/camel/providers/imap/camel-imap-folder.c:
	(imap_refresh_info): now we lock the folder also, before locking the
	service, in order to respect better the lock order. This should avoid
 	some locks.
	
	* libtinymail-camel/camel-lite/camel/providers/imap/camel-imap-store.[ch]:
	now we store a reference to the struct addrinfo used for connections. When
	we are successful getting a valid addrinfo, it's stored and reused. This
	way we prevent doing lots of calls to getaddrinfo and subsequent name